[tool.poetry]
name = "switchboard"
version = "0.1.0"
description = "a switchboard template for chat gpt plugins"
authors = ["Bram Adams <3282661+bramses@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = "^0.95.1"
python-multipart = "^0.0.6"
fastapi-security = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
